# mkdocs-tutorial

./: README.md  mkdocs.yml  pyproject.toml
docs/: about.md  index.md
docs/lewoy_directory/: lewoy.md
src/mkdocs_tutorial/: lewoy.py
