[project]
name = "mkdocs-tutorial"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Samuel Koh Zhi Kang", email = "samuelkohzk@gmail.com"},
]
dependencies = [
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "mkdocs-material>=9.5.24",
    "mkdocstrings[python]>=0.25.1",
]
